Fixing tree-search icon alignment on Measure Flow

--- a/Packages/ohif-measurements/client/components/measureFlow/selectTree/selectTree.styl
+++ b/Packages/ohif-measurements/client/components/measureFlow/selectTree/selectTree.styl
@@ -84,7 +84,7 @@ $gray6 = #303030
     background-color: $gray4
     border-bottom: 1px solid $gray3
     color: $gray6
-    display: block
+    display: flex
     margin: 0
     padding: 5px
     position: relative
